syntax = "proto3";

package com.ayo.inventorymanagement;

option java_multiple_files = true;
option java_package = "com.ayo.inventorymanagement";
option java_outer_classname = "InventoryManagementServiceProto";

service InventoryManagementService {
  rpc GetStockLevels(GetStockLevelsRequest) returns (GetStockLevelsResponse);
  rpc UpdateStock(stream UpdateStockRequest) returns (stream UpdateStockResponse);
  rpc AddProduct(AddProductRequest) returns (AddProductResponse);
}

message GetStockLevelsRequest {
  // Optionally, include any parameters for the request
}

message GetStockLevelsResponse {
  repeated Product stock = 1;

  message Product {
    string id = 1;
    string name = 2;
    int32 quantity = 3;
  }
}

message UpdateStockRequest {
  string product_id = 1;
  int32 quantity_change = 2;
}

message UpdateStockResponse {
  // Optionally, include any response fields
}

message AddProductRequest {
  string name = 1;
  int32 quantity = 2;
}

message AddProductResponse {
  string product_id = 1;
}
