syntax = "proto3";

package com.ayo.temperature;

option java_multiple_files = true;
option java_package = "com.ayo.temperature";
option java_outer_classname = "TemperatureServiceProto";

service TemperatureService {
  rpc StreamTemperature(TemperatureRequest) returns (stream TemperatureData);
}


message TemperatureRequest{}

message TemperatureData {
  double temperature = 1;
}